deleting shoppincart items fixed
